Corrected letter-spacing

--- a/ui/src/ReusableComponents/ToolTip.scss
+++ b/ui/src/ReusableComponents/ToolTip.scss
@@ -29,6 +29,7 @@
     text-decoration-line: underline;
     color: $prime-1;
     font-weight: normal;
+    letter-spacing: normal;
   }
 
   .whatIsThisHover{
